assets/css/main.css
html{
    overflow-y: auto !important;
    font-size: initial !important;
    font-family: initial;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
}

body{
    text-rendering: optimizeLegibility;
    overflow: hidden;
}

.header-1{
    filter:
            drop-shadow(rgba(201, 201, 201, 0.5) 0px 0px 3px)
            drop-shadow(#818181 0px 0px 3px)
            drop-shadow(rgba(0, 0, 0, 0.3) 0px 1px 3px)
            drop-shadow(rgba(0, 0, 0, 0.3) 0px 0px 3px)
            brightness(1.6);
    text-shadow: 1px 3px 3px rgba(0, 0, 0, 0.7);
    text-transform: uppercase;
}

.moody-card{
    border: 1px solid silver;
    position: relative;
    margin: 24px;
}

.moody-card-frame{
    box-sizing: border-box;
    display: block;
    content: none;
}

.moody-card-frame:before{
    position: absolute;
    content: "";
    top: -8px;
    left: -9px;
    right: 7px;
    bottom: 7px;
    border: 1px solid red;
    display: block;
}

.moody-card-frame:after{
    position: absolute;
    content: "";
    top: 7px;
    left: 7px;
    right: -9px;
    bottom: -8px;
    border: 1px solid green;
    display: block;
}

